--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/values/strings.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/values/strings.xml
@@ -11,5 +11,14 @@
     <string name="year">Year</string>
     <string name="individual_subscription">Individual Subscription</string>
     <string name="group_subscription">Continue to Group Payment</string>
+    <string name="title_activity_delete_sub">DeleteSub</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
